# competitive-ai-coder

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml
benchmark/: README.md  pretty_print_r1_codeforces.py  r1_codeforces.ipynb  rllm_codeforces.ipynb
data_util/: README.md  __init__.py  codeforces.py  piston_eval.py  programming_pretty.py
datasets/: README.md  compare_datasets.py  filter_and_save_cots.py  filter_and_save_cots_sol_py.py  mixture_of_thought.ipynb  parallel_filter_solution_py.py  visualize_single_problem_pair.py
docs/: benchmarks.md  data_util.md  datasets.md  evaluation.md  index.md  inference.md  training.md
eval/: BATCH_EVALUATION_SUMMARY.md  README.md  README_batch_evaluation.md  batch_eval_consolidated.sh  batch_eval_solutions.py  eval_with_piston_gentest_checker_stats.py
infer/: BATCH_INFERENCE_SUMMARY.md  README.md  README_batch_inference.md  batch_inference_consolidated.sh  batch_inference_vllm.py  generate_qwen_vllm_think.py
model_util/: README.md  __init__.py  file_util.py  model_util.py  text_util.py
rllm/: convert_trajectories_to_cots.py  run_rllm_from_parquet.py
test/: README.md  test_2063c.py  test_piston.py  test_piston_running_ex.py  test_piston_single_problem.py  test_piston_w_generatedtests.py
train/: FIXES_APPLIED.md  READEME.md  README.md  README_vllm_consolidation.md  SAFETENSORS_UPDATE.md  batch_consolidate_for_vllm.py  consolidate_cpu.py  consolidate_deepspeed_checkpoint.py  consolidate_examples.sh  consolidate_for_vllm.py  consolidate_for_vllm_wrapper.sh  deepspeed_zero2.json  deepspeed_zero3.json  (+4 more)
(+26 files in other folders)
